--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/alecherryy/wbdv-sp21-apizzoccheri-server-node/issues"
   },
-  "homepage": "https://github.com/alecherryy/wbdv-sp21-apizzoccheri-server-node#readme"
+  "homepage": "https://github.com/alecherryy/wbdv-sp21-apizzoccheri-server-node#readme",
+  "devDependencies": {
+    "express": "^4.17.1"
+  }
 }
