--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   "author": "Alessia Pizzoccheri",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.4",
+    "cors": "^2.8.5",
+    "express-session": "^1.17.1"
+  },
+  "engines": {
+    "node": "14.16.0"
   }
 }
